--- a/certificate.html
+++ b/certificate.html
@@ -24,7 +24,7 @@
         <h2>🎓 My Achievements & Certificates</h2>
         <div class="slider">
             <div class="slider-track">
-        <!-- REPEAT images as needed for loop illusion -->
+              
                 <img src="arean.png" alt="Certificate 1">
                 <img src="internshala.png" alt="Certificate 2">
                 <img src="jobaaj.jpg" alt="Certificate 3">
@@ -34,7 +34,7 @@
                 <img src="saras ai.png" alt="Certificate 1">
                 <img src="tata data visualization.png" alt="Certificate 2">
                 <img src="tcsiqn.png" alt="Certificate 3">
-        <!-- Add more duplicates if needed to maintain loop -->
+        <!-- aur bhe add kr sakte hai  -->
             </div>
         </div>
     </section>
